Return only SAML 2.0 support in the sp-metadata.xml (#2869)