@@ -92,8 +92,7 @@ public abstract class BaseSAML2MetadataGenerator implements SAML2MetadataGenerat
 
     private List<SAML2MetadataUIInfo> metadataUIInfos = new ArrayList<>();
 
-    private List<String> supportedProtocols = new ArrayList<>(Arrays.asList(SAMLConstants.SAML20P_NS,
-        SAMLConstants.SAML10P_NS, SAMLConstants.SAML11P_NS));
+    private List<String> supportedProtocols = List.of(SAMLConstants.SAML20P_NS);
 
     private SAML2MetadataSigner metadataSigner;
 
